# fuzzstr

./: pyproject.toml
docs/: conf.py  index.rst
docs/source/: fuzzstr.rst  modules.rst
fuzzstr/: fuzzdf.py  fuzzstr.py  fuzzy.py
notebooks/: Untitled.ipynb
tests/: test_fuzzstr.py
